--- a/BookStoreApp.Blazor.Server.UI/BookStoreApp.Blazor.Server.UI.csproj
+++ b/BookStoreApp.Blazor.Server.UI/BookStoreApp.Blazor.Server.UI.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.18" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
+  </ItemGroup>
+
 </Project>
